# keebopt

./: Cargo.toml  LICENSE  grams-test.json  grams.json  layout.dhall  layouts  letters.json  map.json  ngram2.json  ngram3.json  ngram4.json  ngrams-all.json  ngrams.json  parse.py  test  test.dhall
src/: annealing.rs  charmap.rs  data.rs  layout.rs  layout.yml  main.rs  optimize.rs
