[package]
name = "keebopt"
version = "0.1.0"
authors = ["crides <zhuhaoqing@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
rand = "*"
indicatif = "*"
smallvec = "*"
