[package]
name = "keebopt"
version = "0.1.0"
authors = ["crides <zhuhaoqing@live.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
debug = 1

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
rand = "*"
clap = { version = "3.0", features = ["cargo"] }
rayon = "*"
coz = "*"
itertools = "0.10"
